# SnapHound

./: .gitignore  README.md  build_perm.js  build_setup.js  index.html  package-lock.json  package.json
src/: App.css  App.jsx  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_processor.rs  image_processor.rs  initialise.rs  main.rs  search_processor.rs  utils.rs
src/components/Header/: Header.jsx
src/components/MediaGrid/: MediaGrid.jsx  MediaItem.jsx  index.js
src/components/Modals/: index.js
src/components/Modals/InfoModal/: InfoModal.jsx
src/components/Modals/SettingsModal/: SettingsModal.jsx
src/components/Modals/VideoModal/: VideoModal.jsx
src/components/Modals/ViewImageModal/: ViewImageModal.jsx
src/components/StatusBar/: StatusBar.jsx
src/constants/: index.js
src/hooks/: useTauriAPI.js
src/styles/: App.css  Header.css  MediaGrid.css  Modals.css  StatusBar.css
src/utils/: mediaUtils.js
