[package]
name = "snaphound"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snaphound_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "default"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rfd = "0.15.2"
futures-util = { version = "0.3", features = ["io"] }
futures = "0.3.31"
walkdir = "2.3"
dirs = "4.0"
uuid = { version = "1.8", features = ["v4"] }
imageproc = "0.23.0"
mozjpeg = "0.10"

image = { version = "0.24", features = ["webp", "jpeg"] }

webp = "0.2"
rayon = "1.8"
num_cpus = "1.15"
fast_image_resize = "2.7"  # Faster alternative to image::imageops
rgb = "0.8"  # For faster color conversions
lazy_static = "1.4.0"
